force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>User Story ID: 24
User Story: Create new CVR Account</description>
    <inlineHelpText>The segment is used to determine how we approach the account</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>