force-app/main/default/objects/Account/fields/Segment_helper__c.field-meta.xml
<CustomField>
    <fullName>Segment_helper__c</fullName>
    <description>Temporary Helper field to check if the calculated Segment matches the current segment. Used for easy extraction of all Accounts where this is false (needs update).</description>
    <formula>TEXT(Segment__c) =  Segment_calculated__c</formula>
    <label>Segment helper</label>
    <type>Checkbox</type>
</CustomField>