force-app/main/default/objects/Account/fields/Send_Update_to_Contract_API__c.field-meta.xml
<CustomField>
    <fullName>Send_Update_to_Contract_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to true a Platform Event will be created containing Quote and Quote Line (Product) information which the Contract API subscribes to.</description>
    <label>Send Update to Contract API</label>
    <type>Checkbox</type>
</CustomField>