force-app/main/default/objects/Account/fields/Show_Opportunity_Create_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Opportunity_Create_Button__c</fullName>
    <formula>if(OR(Owner.Id = $User.Id,  $Permission.Sales_Assistant_Manager ),true,false)</formula>
    <label>Show Opportunity Create Button</label>
    <type>Checkbox</type>
</CustomField>