force-app/main/default/objects/Account/fields/SR_ACE_Call_Guide__c.field-meta.xml
<CustomField>
    <fullName>SR_ACE_Call_Guide__c</fullName>
    <description>The &quot;ACE (Call Guide)&quot; revenue generated by the Account the last 12 months</description>
    <inlineHelpText>The &quot;ACE (Call Guide)&quot; revenue generated by the Account the last 12 months</inlineHelpText>
    <label>ACE (Call Guide)</label>
    <summarizedField>Service_Revenue_Actual__c.ACE_Call_Guide__c</summarizedField>
    <summaryForeignKey>Service_Revenue_Actual__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>