force-app/main/default/objects/Account/fields/SR_Fixed__c.field-meta.xml
<CustomField>
    <fullName>SR_Fixed__c</fullName>
    <description>The &quot;Fixed&quot; revenue generated by the Account in the last 12 months.</description>
    <inlineHelpText>The &quot;Fixed&quot; revenue generated by the Account in the last 12 months.</inlineHelpText>
    <label>Fixed</label>
    <summarizedField>Service_Revenue_Actual__c.Fixed__c</summarizedField>
    <summaryForeignKey>Service_Revenue_Actual__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>