force-app/main/default/objects/Account/fields/SR_Internet_and_MPLS__c.field-meta.xml
<CustomField>
    <fullName>SR_Internet_and_MPLS__c</fullName>
    <description>The &quot;Internet and MPLS&quot; revenue generated by the Account in the last 12 months</description>
    <inlineHelpText>The &quot;Internet and MPLS&quot; revenue generated by the Account in the last 12 months</inlineHelpText>
    <label>Internet and MPLS</label>
    <summarizedField>Service_Revenue_Actual__c.Internet_and_MPLS__c</summarizedField>
    <summaryForeignKey>Service_Revenue_Actual__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>