force-app/main/default/objects/Account/fields/SR_MBB_DUAL_SIM_M2M__c.field-meta.xml
<CustomField>
    <fullName>SR_MBB_DUAL_SIM_M2M__c</fullName>
    <description>The &quot;MBB, DUAL SIM, M2M&quot; revenue generated by the Account in the last 12 months.</description>
    <inlineHelpText>The &quot;MBB, DUAL SIM, M2M&quot; revenue generated by the Account in the last 12 months.</inlineHelpText>
    <label>MBB, DUAL SIM, M2M</label>
    <summarizedField>Service_Revenue_Actual__c.MBB_DUAL_SIM_M2M__c</summarizedField>
    <summaryForeignKey>Service_Revenue_Actual__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>