force-app/main/default/objects/Account/fields/SR_Other__c.field-meta.xml
<CustomField>
    <fullName>SR_Other__c</fullName>
    <description>Other product revenue generated by the Account in the last 12 months.</description>
    <inlineHelpText>Other product revenue generated by the Account in the last 12 months.</inlineHelpText>
    <label>Other</label>
    <summarizedField>Service_Revenue_Actual__c.Other__c</summarizedField>
    <summaryForeignKey>Service_Revenue_Actual__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>