force-app/main/default/objects/Account/fields/SR_Service_Revenue_L12__c.field-meta.xml
<CustomField>
    <fullName>SR_Service_Revenue_L12__c</fullName>
    <description>The total service revenue for the last 12 months.</description>
    <inlineHelpText>The total service revenue for the last 12 months.</inlineHelpText>
    <label>Service Revenue L12</label>
    <summarizedField>Service_Revenue_Actual__c.Amount2__c</summarizedField>
    <summaryForeignKey>Service_Revenue_Actual__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>