force-app/main/default/objects/Account/fields/SR_Unified_Communication__c.field-meta.xml
<CustomField>
    <fullName>SR_Unified_Communication__c</fullName>
    <description>The &quot;Unified Communication&quot; revenue generated by the Account in the last 12 months.</description>
    <inlineHelpText>The &quot;Unified Communication&quot; revenue generated by the Account in the last 12 months.</inlineHelpText>
    <label>Unified Communication</label>
    <summarizedField>Service_Revenue_Actual__c.Unified_Communication__c</summarizedField>
    <summaryForeignKey>Service_Revenue_Actual__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>