force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>User Story ID: 10
User Story: Create new CVR Account</description>
    <inlineHelpText>Pending (new account that needs validation)
Prospect (new account with no closed business)
Active (existing customer)
Attrited (Once an active customer, but not anymore)
Closed (A prospect who who never converted)</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Attrited</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>