force-app/main/default/objects/Account/fields/Sum_of_Sim_Cards__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Sim_Cards__c</fullName>
    <description>The sum of SIM cards. Quick and dirty field for temporary estimation of NPS contacts.</description>
    <formula>Active_Sim_Cards_MBB__c +  Active_Sim_Cards_Voice__c</formula>
    <label>Sum of Sim Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>