force-app/main/default/objects/Account/fields/Telia_Home_Office__c.field-meta.xml
<CustomField>
    <fullName>Telia_Home_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MK - 04/08/2021 - TSFDK-262</description>
    <label>Telia Home Office</label>
    <type>Checkbox</type>
</CustomField>