force-app/main/default/objects/Account/fields/Temporary_Update_Flag__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Update_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temporary Update Flag</label>
    <type>Checkbox</type>
</CustomField>