force-app/main/default/objects/Account/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <description>A unique code identifying a foreign company</description>
    <inlineHelpText>A unique code identifying a foreign company</inlineHelpText>
    <label>Foreign Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>