force-app/main/default/objects/Account/validationRules/CVR_number_must_be_8_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>CVR_number_must_be_8_digits</fullName>
    <active>true</active>
    <description>Checks that CVR number is an 8 digit number.</description>
    <errorConditionFormula>NOT(ISBLANK( CVR__c )) &amp;&amp; (LEN( CVR__c) &lt;&gt; 8 || NOT(ISNUMBER( CVR__c )))</errorConditionFormula>
    <errorDisplayField>CVR__c</errorDisplayField>
    <errorMessage>The CVR number must be an 8 digit number.</errorMessage>
</ValidationRule>