force-app/main/default/objects/Account/validationRules/CVR_number_required_for_CVR_accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>CVR_number_required_for_CVR_accounts</fullName>
    <active>true</active>
    <description>If CVR is selected as Account Source, the Account must have a CVR number</description>
    <errorConditionFormula>TEXT(AccountSource)=&quot;CVR&quot; &amp;&amp; ISBLANK( CVR__c )</errorConditionFormula>
    <errorDisplayField>CVR__c</errorDisplayField>
    <errorMessage>An Account with CVR as Account Source, must have a CVR number</errorMessage>
</ValidationRule>