force-app/main/default/objects/Account/validationRules/No_changing_Account_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>No_changing_Account_owner</fullName>
    <active>true</active>
    <description>Only sales managers and data stewards are allowed to change account ownership.</description>
    <errorConditionFormula>ISCHANGED( OwnerId )
&amp;&amp; 
(
NOT($Permission.Telia_Data_Steward ) &amp;&amp;
NOT($Permission.Telia_Enterprise_sales_manager )
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Only sales managers and data stewards are allowed to change account owner.</errorMessage>
</ValidationRule>