force-app/main/default/objects/Account/validationRules/Prevent_account_creation_from_Sales_Play.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_account_creation_from_Sales_Play</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISNEW(),
 Lead_Conversion_Check__c  = TRUE,
  Sales_Play_Record_Type__c = TRUE
)</errorConditionFormula>
    <errorMessage>New Accounts are not allowed to be created from Sales Plays</errorMessage>
</ValidationRule>