force-app/main/default/objects/Account/validationRules/Rationale_required_if_no_CVR_or_VAT.validationRule-meta.xml
<ValidationRule>
    <fullName>Rationale_required_if_no_CVR_or_VAT</fullName>
    <active>true</active>
    <description>If no CVR or VAT number is entered, the user must provide a rationale for creating the account</description>
    <errorConditionFormula>AND(ISBLANK( CVR__c ), ISBLANK( VAT__c ), ISBLANK( Rationale__c ),  Sales_Play_Record_Type__c = false

)</errorConditionFormula>
    <errorDisplayField>Rationale__c</errorDisplayField>
    <errorMessage>The account doesn&apos;t have a CVR or VAT number. Please describe why the account should be created.</errorMessage>
</ValidationRule>