force-app/main/default/objects/Account/listViews/My_Active_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Active_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>No_of_open_opportuntities__c</columns>
    <columns>SR_Service_Revenue_L12__c</columns>
    <columns>Name_and_Address__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Segment__c</columns>
    <columns>Entitlement__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Last_Activity_Date2__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>CVR_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>My Active Accounts</label>
</ListView>