force-app/main/default/objects/Account/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CVR__c</columns>
    <columns>Nace_Code__c</columns>
    <columns>Nace_Description__c</columns>
    <columns>No_of_open_opportuntities__c</columns>
    <columns>Rationale__c</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Approval</label>
</ListView>