force-app/main/default/objects/Account/listViews/Prospect_Accounts.listView-meta.xml
<ListView>
    <fullName>Prospect_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>SR_Service_Revenue_L12__c</columns>
    <columns>No_of_open_opportuntities__c</columns>
    <columns>Last_Activity_Date2__c</columns>
    <columns>Marketing_Opt_Out_CVR__c</columns>
    <columns>Entitlement__c</columns>
    <columns>CVR_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Prospect</value>
    </filters>
    <filters>
        <field>CVR_Status__c</field>
        <operation>equals</operation>
        <value>aktiv,normal</value>
    </filters>
    <label>2. My Prospect Accounts</label>
</ListView>