force-app/main/default/objects/Account/listViews/X3_Key_Large_Accounts.listView-meta.xml
<ListView>
    <fullName>X3_Key_Large_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Status__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>Large Account</value>
    </filters>
    <label>3. Large Accounts</label>
</ListView>