force-app/main/default/objects/Account/listViews/X5_Business_Accounts.listView-meta.xml
<ListView>
    <fullName>X5_Business_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Status__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>Business Account</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>5. Business Accounts</label>
</ListView>