force-app/main/default/objects/Account/listViews/X7_All_Accounts.listView-meta.xml
<ListView>
    <fullName>X7_All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CVR__c</columns>
    <columns>Status__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>7. All Accounts</label>
</ListView>